--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "keywords": [
     "spa",
     "react",
-    "smart-notes"
+    "smart-notes",
+    "bad4iz"
   ],
   "author": "bad4iz",
   "license": "ISC",
