--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.18.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-mdl": "^1.10.3",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
